<resources>
    <string name="app_name">Guard Duty</string>
    <string name="settings">Settings</string>
    <string name="log_in_as_worker">Log in as worker</string>
    <string name="log_out_worker">Log out worker</string>
    <string name="company_name">Company Name</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="remainging_time">Remaining time</string>
    <string name="time">time</string>
    <string name="stop_call">Stop call</string>
    <string name="please_login_to_select_site">Please login to select a site.</string>
    <string name="log_in_to_settings">Log in to settings</string>
    <string name="device_site">Device site</string>
    <string name="settings_login">Settings login</string>
    <string name="worker_login">Worker login</string>
    <string name="create_new_route">Create new route</string>
    <string name="title_activity_route_creation">Map</string>
    <string name="please_wait">Please wait</string>
    <string name="is_running">is running</string>
    <string name="call_failed">Submitting the call failed. Press to retry.</string>
</resources>
