<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CallActivity">

    <Button
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:text="@string/stop_call"
        android:id="@+id/call_respond_button"
        android:layout_below="@+id/call_remaining_time_value"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="#fe0000"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/remainging_time"
        android:id="@+id/call_remaining_time_text"
        android:layout_marginTop="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/time"
        android:id="@+id/call_remaining_time_value"
        android:layout_below="@+id/call_remaining_time_text"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
