<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CompanyLoginActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/company_login_username_field"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/company_login_password_field"
        android:layout_alignStart="@+id/company_login_password_field"
        android:layout_marginTop="100dp"
        android:hint="@string/company_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/company_login_password_field"
        android:layout_below="@+id/company_login_username_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:id="@+id/company_login_submit_button"
        android:layout_marginTop="150dp"
        android:layout_below="@+id/company_login_password_field"
        android:layout_centerHorizontal="true"
        android:onClick="loginCompany" />
</RelativeLayout>
